@@ -13,6 +13,7 @@ PostGIS 2.0.1
   - #1761, handling of subdatasets in NetCDF, HDF4 and HDF5 in raster2pgsql.
   - #1763, topology.toTopoGeom use with custom search_path.
   - #1766, don't let ST_RemEdge* destroy peripheral TopoGeometry objects.
+  - #1774, Clearer error on setting an edge geometry to an invalid one.
   - #1775, ST_ChangeEdgeGeom collision detection with 2-vertex target.
   - #1776, fix ST_SymDifference(empty, geom) to return geom.
   - #1779, install SQL comment files.
